[ui -> Alert] fix cutting off content for ios and safari

--- a/packages/ui/components/Alert/index.styl
+++ b/packages/ui/components/Alert/index.styl
@@ -7,7 +7,7 @@
   margin-right 1u
 
 .label
-  flex 1
+  flex-grow 1
 
 .rightIconWrapper
   margin-left 1u
